'publication from pim@ojs+linux+5.15.49+quiqr-desktop-app-0.13.6'

--- a/themes/sugar-candy-gallery/layouts/index.html
+++ b/themes/sugar-candy-gallery/layouts/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="row" id="lightgallery">
 
-      {{ range .Params.gallery }}
+      {{ range .Params.gallery2 }}
       {{ partial "gallery-item.html" . }}
       {{ end }}
 
