--- a/themes/sugar-candy-gallery/layouts/partials/gallery-item.html
+++ b/themes/sugar-candy-gallery/layouts/partials/gallery-item.html
@@ -1,9 +1,9 @@
 <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 item"
 data-aos="fade"
-data-src="{{.}}"
-data-sub-html="{{.}}">
+data-src="{{.image}}"
+data-sub-html="{{.caption}}">
   <a href="#">
     <span class="icon-expand"></span>
-    <img src="{{.}}" alt="{% site.title %}" class="img-fluid">
+    <img src="{{.image}}" alt="{{ .caption }}" class="img-fluid">
   </a>
 </div>
