--- a/themes/sugar-candy-gallery/layouts/index.html
+++ b/themes/sugar-candy-gallery/layouts/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="row" id="lightgallery">
 
-      {{ range .Params.gallery2 }}
+      {{ range .Params.gallery }}
       {{ partial "gallery-item.html" . }}
       {{ end }}
 
